# emoji-picker

./: Cargo.toml  Readme.md
src/: main.rs
