[package]
name = "emoji-picker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arboard = "3.3.0"
clap = { version = "4.4.11", features = ["derive"] }
emojis = "0.6.1"
vizia = { git = "https://github.com/vizia/vizia" }
